<resources>

    <string name="app_name">Transmission Remote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="size_units">
        <item>%s Б</item>
        <item>%s Кб</item>
        <item>%s Мб</item>
        <item>%s Гб</item>
        <item>%s Тб</item>
        <item>%s Пб</item>
        <item>%s Эб</item>
        <item>%s Зб</item>
        <item>%s Йб</item>
    </string-array>

    <string-array name="speed_units">
        <item>%s Б/с</item>
        <item>%s Кб/с</item>
        <item>%s Мб/с</item>
        <item>%s Гб/с</item>
        <item>%s Тб/с</item>
        <item>%s Пб/с</item>
        <item>%s Эб/с</item>
        <item>%s Зб/с</item>
        <item>%s Йб/с</item>
    </string-array>

    <string name="torrent_info_tab_details">Сведения</string>
    <string name="torrent_info_tab">Tab</string>


    <!-- e.g. "50 MB of 100 MB" -->
    <string name="completed_string">%1$s из %2$s</string>

    <!-- e.g. "3 d 18 h" -->
    <string name="duration_days">%1$d д %2$d ч</string>

    <!-- e.g. "3 h 18 m" -->
    <string name="duration_hours">%1$d ч %2$d м</string>

    <!-- e.g. "1 m 18 s" -->
    <string name="duration_minutes">%1$d м %2$d с</string>

    <!-- e.g. "18 s" -->
    <string name="duration_seconds">%d с</string>
    <string name="activity">Активность</string>
    <string name="completed">Завершено</string>
    <string name="uploaded">Отдано</string>
    <string name="download_speed">Скорость загрузки</string>
    <string name="upload_speed">Скорость отдачи</string>
    <string name="eta">ETA</string>
    <string name="information">Информация</string>
    <string name="total_size">Общий размер</string>
    <string name="location">Расположение</string>
    <string name="creator">Создан в</string>
    <string name="date_created">Дата создания</string>
    <string name="last_activity">Последняя активность</string>
    <string name="comment">Комментарий</string>
    <string name="dates">Даты</string>
    <string name="added_date">Добавлен</string>
    <string name="done_date">Завершен</string>
    <string name="durations">Продолжительность</string>
    <string name="duration_downloading">Загрузка</string>
    <string name="duration_seeding">Раздача</string>
    <string name="server_name">Имя сервера</string>
    <string name="add_server">Добавить сервер</string>
    <string name="edit_server">Редактировать сервер</string>
    <string name="servers_management">Управление серверами</string>
    <string name="app_settings">Настройки</string>
    <string name="hostname">Имя хоста или IP-адрес</string>
    <string name="Port">Порт</string>
    <string name="rpc_path">Путь RPC</string>
    <string name="authentication">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="manage_servers">Управление серверами</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="error_empty_field">Поле не может быть пустым</string>
    <string name="arrow_down">▼</string>
    <string name="arrow_up">▲</string>
    <string name="title_servers">Серверы</string>
    <string name="delete">Удалить</string>
    <string name="select_all">Выбрать все</string>

    <plurals name="remove_servers_message">
        <item quantity="one">Удалить %d выбранный сервер?</item>
        <item quantity="few">Удалить %d выбранных сервера?</item>
        <item quantity="many">Удалить %d выбранных серверов?</item>
        <item quantity="other">Удалить %d выбранных серверов?</item>
    </plurals>

</resources>
