<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/nav_header_main" />

            <LinearLayout
                android:id="@+id/ll_nav_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <Button
                    android:id="@+id/bt_settings_main"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_settings_black_24dp"
                    android:drawablePadding="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/app_settings"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_servers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <ListView
                    android:id="@+id/lv_servers_main"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:divider="@null"
                    android:choiceMode="singleChoice"
                    android:listSelector="#EEEEEE"
                    />


                <Button
                    android:id="@+id/bt_add_server_main"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_add_24dp"
                    android:drawablePadding="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/add_server"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/bt_manage_servers_main"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_settings_black_24dp"
                    android:drawablePadding="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/manage_servers"
                    android:textAllCaps="false" />

            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
